tests/invalid/match_case_type_mismatch.wio
fn Entry() -> i32 {
    return match (1) {
        "1": 10;
        assumed: 20;
    };
}
